--- a/chimero-habit-flow/apps/electron/src/renderer/index.html
+++ b/chimero-habit-flow/apps/electron/src/renderer/index.html
@@ -2,8 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta
+  http-equiv="Content-Security-Policy"
+  content="
+    default-src 'self';
+    img-src 'self' data: blob: chimero-asset:;
+    style-src 'self' 'unsafe-inline';
+    script-src 'self' 'unsafe-eval';
+  "
+/>
     <title>Chimero Habit Flow</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:" />
   </head>
   <body class="bg-slate-950 text-slate-100">
     <div id="root"></div>
